Fix 3-button flex/spacing bug

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,8 @@ main article:nth-of-type(odd) section a.button:hover {
 }
 
 noscript ul li a,
-main article section p a.button {
+main article section p a.button,
+main article section ul a.button {
   border-radius: 5px;
   padding: 10px 20px;
   text-decoration: none;
@@ -114,15 +115,33 @@ main article section p a.button {
   word-break: break-word;
   display: inline-block;
 }
-main article:nth-of-type(odd) section p:has(> a.button) {
+
+main article section ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 1em;
+  padding: 0;
+  margin: 0;
+}
+main article section ul li {
+  display: block;
+  list-style-type: none;
+  line-height: 1.5;
+}
+main article:nth-of-type(odd) section p:has(> a.button),
+main article:nth-of-type(odd) section ul:has(> li > a.button) {
   text-align: end;
 }
-main article:nth-of-type(even) section p:has(> a.button) {
+main article:nth-of-type(even) section p:has(> a.button),
+main article:nth-of-type(even) section ul:has(> li > a.button) {
   text-align: start;
 }
 @media (max-width: 789px) {
-  main article section p:has(> a.button) {
+  main article section p:has(> a.button),
+  main article section ul:has(> li > a.button) {
     text-align: center !important;
+    flex-direction: column;
   }
 }
 
